# git-quickmsg

./: Cargo.toml  LICENSE  README.md
src/: main.rs
