[package]
name = "git-quickmsg"
version = "0.1.0"
authors = ["Jonas A. Hultén <jonas@sldr.se>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A (dumb) utility to generate commit messages"
repository = "https://github.com/DrSLDR/git-quickmsg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
